Temporarily fix white space on selection page

--- a/finalproject/src/App.css
+++ b/finalproject/src/App.css
@@ -6,8 +6,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height:100%;
   width:auto;
+  height: 1000px;
+
 }
 
 h1{
